[package]
name = "backend"
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
tokio = { version = "1.24.1", features = ["full"] }
warp = "0.3.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
bytes = "1.3.0"
futures-util = { version = "0.3.25", default-features = false, features = ["sink"] }
tokio-stream = "0.1.11"
uuid = { version = "1.2.2", features = ["v4"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
sha2 = { version = "0.10.6" }
base64ct = "1.5.3"
serde = { version = "1.0.149", features = ["derive"] }
